Added websockets and saga placeholder for when api is implemented

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
     <title>React.js Boilerplate</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
   </head>
   <body>
     <!-- Display a message if JS has been disabled on the browser. -->
